2000-05-24  Tristan Tarrant  <tarrant_tristan@emc.com>

	* usecode.cc: call endgame
	* exult.cc: press F10 to see the endgame sequence

2000-05-23  Jeff Freedman  <jeff@patches.simutech.com>

	* Support for lighting (torches, lamps, etc)

2000-05-23  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Makefile.win32: added
	* Makefile.am: added Makefile.win32 to dist_targets

2000-05-22  Tristan Tarrant  <tarrant_tristan@emc.com>

	* */Makefile.am, configure.in, etc...: Rehauled build mechanism,
	no need to regenerate dependencies by hand, gcc dynamically does
	that, Makefile.am files are now much nicer and easier to maintain
	and this is the proper GNU way. Maybe I've broken Win32 builds...
	Removed old files as they can be found in CVS's attic.
	Made 'make dist' work (try it)

2000-05-22  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc: added default case to key switch (kill warning)
	* objs.cc, imagewin.cc, actors.cc, gamewin.cc, gumps.cc,
	  actorio.cc, usecode.cc: re-ordered initializers to kill warnings
	* configure.in: added -Wno-long-long to Windows build, since
	  SDL and Windows header files contain long-long's

2000-05-21  Willem Jan Palenstijn <palenstijn@wanandoo.nl>
	* exult.cc, mouse.h: Wait_for_arrival() didn't restore on-screen 
	state of the mouse
	* configure.in: --enable-warnings turns on ALL warnings, in addition
	to everything --enable-debug does
	* usecode.cc: added a guess to intrinsic 0x4F
	
2000-05-20  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* lots_of_files: changed most #ifndef WIN32 to #ifdef XWIN since 
	that's what they were supposed to mean
	* gamedat.cc, Configuration.cc: some preliminary BEOS things

2000-05-19  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc, Audio.h, win_MCI.h, win_MCI.cc: Windows MIDI repeating support

2000-05-19  Tristan Tarrant  <tarrant_tristan@emc.com>

	* gamewin.cc: Blank screen after intro...

2000-05-18  Jeff Freedman  <jeff@amy.nerble.net>
